7335: Fix select2 x spacing

--- a/app/assets/stylesheets/global/forms/forms.scss
+++ b/app/assets/stylesheets/global/forms/forms.scss
@@ -122,6 +122,7 @@ form {
 
   .select2-selection__clear {
     font-size: 22px;
+    margin-left: 5px;
     color: $gray-text;
   }
 
